tests/cases/parser/misc/issue_449.stderr
error: unexpectedly encountered a `=`
 --> $DIR/issue_449.hash:3:2
2 |   
3 |   <=>a // Should report that it unexpectedly encountered `=`
  |    ^ 
  = help: consider adding a `>`
