tests/cases/parser/misc/issue_449.hash
// run=fail, stage=parse

<=>a // Should report that it unexpectedly encountered `=`
